misc layout bugs

--- a/src/app/chat/chat.component.css
+++ b/src/app/chat/chat.component.css
@@ -79,6 +79,7 @@
     background-color: rgb(228, 230, 228);
     height: 40px;
     padding-left: 10px;
+    padding-right: 50px;
     box-shadow: inset 0px 2px 7px 0px rgba(0, 0, 0, .5);
 }
 
