--- a/src/app/chat/user-info-panel/user-info-panel.component.css
+++ b/src/app/chat/user-info-panel/user-info-panel.component.css
@@ -30,6 +30,7 @@
     position: absolute;
     right: 15px;
     bottom: .5px;
+    pointer-events: none;
 }
 
 .lg-nav-icon {
